
Fixed: log scaling had issues in magbar when the pretty scale went outside the nominal range (the mapping was not correct in some circumstances).

Fixed: box function in magaxis now inherits the bty type from par.

Fixed: Various documentation typos.


v 1.9.1

Fixed: magplot now has side option to create segments of the plot axes. This is instead of using bty in par (which only affects the box in plot, not the axis labelling). I prefer my behaviour, i.e. you can generate ticks and tick labels on the side you want straight from magplot (which isn't possible with plot). This does mean magplot behaves slightly differently to plot, but this is unavoidable for the high level plotting I desire.

v 1.9.2

Feature:  Added error ellispe option in magerr function.

v 1.9.3 (on CRAN)

Feature:  Added stretch option to magmap, which now takes arguments 'lin' for linear, 'log' for log, 'atanh' for atanh and 'asinh' for asinh. The option 'log' no longer exists in magmap, which could break code written prior to magicaxis v1.9.3.

Feature:  The background colour of the magcon image now extends beyond the limits of the data if necessary. 

Feature:  magerr now picks up the log state automatically, so log argument is no longer required.

v 1.9.4 (in progress, not on CRAN yet)

Feature:  Changed magmap behaviour so that when bad=lo or bad=hi it will scale the extreme by stretchscale and the stretch type, i.e. if bad=lo and stretch='atan' and stretchscale=3 then bad is internally converted to bad=atan(lo*3).

Fixed:  magerr now only attempts to plot error ellipses when the ellipse has area, i.e. both xlo and xhi must be above 0. Before it would plot lots of ellipses with 0 area, i.e. a point, and this could take a lot of unnecessary time.

Feature: magerr will now draw an error bar when xlo or xhi is 0 and corxy has been provided, i.e. since it can't draw an ellipse with width 0 it draws an error bar instead.
--

TO DO:

FEATURE: Add better in-plot legends.


