@@ -1,0 +1,10 @@
+Package: magicaxis
+Type: Package
+Title: Pretty scientific plotting with minor-tick and log minor-tick support
+Version: 1.6
+Date: 2013-07-29
+Author: Aaron Robotham
+Maintainer: Aaron Robotham <aaron.robotham@uwa.edu.au>
+Description: Functions to make useful (and pretty) plots for scientific plotting. Additional plotting features are added for base plotting, with particular emphasis on making attractive log axis plots.
+License: GPL-2
+Depends: R (>= 2.13), MASS
